--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
 
-    <title>Redx Saga Tutorial</title>
+    <title>3.1 Redux Saga Tutorial</title>
   </head>
   <body>
     <noscript>
